src/styles/base/_global.scss
body {
    font-size: 1rem;
    color: var(--white);
    // min-height: -webkit-fill-available;

    padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
        env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
}

html {
    height: -webkit-fill-available;
}

:not(.no-scrollbar)::-webkit-scrollbar {
    width: 2px;
    height: 2px;
}

:not(.no-scrollbar)::-webkit-scrollbar-track {
    background-color: #2e2f4b;
}

:not(.no-scrollbar)::-webkit-scrollbar-thumb {
    background-color: #41527e;
}

:not(.no-scrollbar)::-webkit-scrollbar-thumb:hover {
    background-color: #ccc;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
    display: none;
    width: 0;
}

.no-scrollbar::-webkit-scrollbar-thumb {
    background-color: transparent;
}

.no-scrollbar::-webkit-scrollbar-track {
    background-color: transparent;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

